# routes/location.js
@@ -4,8 +4,9 @@ const router = express.Router();
 const locationController = require('../controllers/location.js');
 
 router.get('/', locationController.getAll);
-router.get('/:username', locationController.getLocation);
+router.get('/:id', locationController.getLocation);
 router.delete('/', locationController.deleteLocation);
-router.put('/', locationController.putLocation);
+router.put('/:id', locationController.putLocation);
+router.post('/', locationController.putLocation);
 
 module.exports = router; 
